--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 
 { 
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "node main.js", 
+    "dev" : "nodemon main.js"
   },
   "dependencies": {
     "express": "^4.18.2",
